BAU: Only support RS256/ES256